breadcrumbs + overflow issue

--- a/gem/styles/gem-springster/modules/polls/_m-polls-form.scss
+++ b/gem/styles/gem-springster/modules/polls/_m-polls-form.scss
@@ -29,7 +29,7 @@
 
 
 .choice-group {
-  padding: 0 0 8px 0;
+  padding: 0 8px 8px;
   margin: 0;
   &:last-of-type {
     padding-bottom: 0;
