--- a/gem/styles/gem-springster/modules/section/_m-section-teaser-listing.scss
+++ b/gem/styles/gem-springster/modules/section/_m-section-teaser-listing.scss
@@ -25,7 +25,11 @@
   }
 }
 
-// Sections colours as per design, using slug names
+.section-teaser-listing--base {
+  overflow: hidden;
+}
+
+// Sections colours as per design
 .section-teaser-listing-header--my-body {
   background-color: $my-body;
 }
